loki/loki-ing.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: loki
  annotations:
    kubernetes.io/ingress.allow-http: 'true'
spec:
  rules:
    - host: ''
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: loki-log-gateway
                port:
                  number: 80
